# grpc-template

./: .dockerignore  .env  .gardenignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  garden.yml  package.json  release.Dockerfile  test.Dockerfile
mongo/: garden.yml
proto/: sample.proto  {{crate_name}}.proto
src/: data.rs  main.rs  server.rs
src/api/: items.rs  mod.rs  query.rs  samples.rs
src/db/: id.rs  mod.rs
src/models/: items.rs  mod.rs
